--- a/_posts/2019-10-03-3.md
+++ b/_posts/2019-10-03-3.md
@@ -6,7 +6,7 @@ categories: misc
 
 ```sh
 openssl genrsa -out ca.key 2048
-openssl req -x509 -new -nodes -key ca.key -days 9999 -out ca.pem -subj '/CN=shinhwagk'
+openssl req -x509 -new -nodes -key ca.key -days 9999 -out ca.pem -subj '/CN=io'
 
 openssl genrsa -out nexus-quay.key 2048
 openssl req -new -key nexus-quay.key -out nexus-quay.csr -subj '/CN=quay.io'
